--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,14 @@ edition = "2021"
 
 [dependencies]
 
-dioxus = { version = "0.5.2", features = ["desktop", "router"], git = "https://github.com/DioxusLabs/dioxus.git" }
+dioxus = { version = "0.5.2", features = ["web", "desktop", "router"], git = "https://github.com/DioxusLabs/dioxus.git" }
 
 # Debug
 tracing = "0.1.40"
 dioxus-logger = "0.5.0"
+cuid2 = "0.1.2"
+
+[features]
+
+desktop = []
+web = []
